--- a/VKManager.cabal
+++ b/VKManager.cabal
@@ -1,13 +1,13 @@
 name:                VKManager
-version:             0.1.0.0
+version:             0.1.1.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/VKManager#readme
-license:             BSD3
+homepage:            https://bitbucket.org/errfrom/vk-manager
+license:             MIT
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
+author:              Ivanov Dmitry
+maintainer:          errfrom@yandex.ru
+copyright:           2017 Ivanov Dmitry
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
@@ -25,6 +25,10 @@ executable VKManager-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , VKManager
+                     , containers  
+                     , wreq
+                     , utf8-string
+                     , aeson
   default-language:    Haskell2010
 
 test-suite VKManager-test
@@ -38,4 +42,4 @@ test-suite VKManager-test
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/VKManager
+  location: https://bitbucket.org/errfrom/vk-manager
