--- a/VKManager.cabal
+++ b/VKManager.cabal
@@ -35,6 +35,7 @@ executable VKManager-exe
                      , lens-aeson
                      , vector
                      , unordered-containers
+                     , regex-posix
   default-language:    Haskell2010
 
 test-suite VKManager-test
