--- a/WFurem.cabal
+++ b/WFurem.cabal
@@ -1,8 +1,8 @@
-name:                VKManager
+name:                WFurem
 version:             0.1.1.0
 -- synopsis:
 -- description:
-homepage:            https://bitbucket.org/errfrom/vk-manager
+homepage:            https://github.com/errfrom/WFurem
 license:             MIT
 license-file:        LICENSE
 author:              Ivanov Dmitry
@@ -24,7 +24,7 @@ executable VKManager-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , VKManager
+                     , WFurem
                      , containers
                      , wreq
                      , utf8-string
@@ -43,10 +43,10 @@ test-suite VKManager-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , VKManager
+                     , WFurem
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://bitbucket.org/errfrom/vk-manager
+  location: https://github.com/errfrom/WFurem
