--- a/WFurem.cabal
+++ b/WFurem.cabal
@@ -15,8 +15,26 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:
+  exposed-modules:     Parser.Receiver
+                      ,Parser.Handler
+                      ,Types.Receive
+                      ,Types.DataBase
+                      ,Internal.Utils
+                      ,Internal.Phones
   build-depends:       base >= 4.7 && < 5
+                     , containers
+                     , wreq
+                     , utf8-string
+                     , aeson
+                     , lens
+                     , bytestring
+                     , text
+                     , lens-aeson
+                     , vector
+                     , unordered-containers
+                     , regex-posix
+                     , regex-compat
+                     , optparse-applicative
   default-language:    Haskell2010
 
 executable VKManager-exe
@@ -37,6 +55,7 @@ executable VKManager-exe
                      , unordered-containers
                      , regex-posix
                      , regex-compat
+                     , optparse-applicative
   default-language:    Haskell2010
 
 test-suite VKManager-test
