--- a/WFurem.cabal
+++ b/WFurem.cabal
@@ -21,6 +21,8 @@ library
                       ,Types.DataBase
                       ,Internal.Utils
                       ,Internal.Phones
+                      ,Collect
+                      ,DBInteract
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , wreq
@@ -35,6 +37,10 @@ library
                      , regex-posix
                      , regex-compat
                      , optparse-applicative
+                     , sqlite-simple
+                     , directory
+                     , filepath
+                     , split
   default-language:    Haskell2010
 
 executable VKManager-exe
@@ -56,6 +62,10 @@ executable VKManager-exe
                      , regex-posix
                      , regex-compat
                      , optparse-applicative
+                     , sqlite-simple
+                     , directory
+                     , filepath
+                     , split
   default-language:    Haskell2010
 
 test-suite VKManager-test
