--- a/WFurem.cabal
+++ b/WFurem.cabal
@@ -41,6 +41,9 @@ library
                      , directory
                      , filepath
                      , split
+                     , http-client
+                     , direct-sqlite
+                     , unix
   default-language:    Haskell2010
 
 executable VKManager-exe
@@ -66,6 +69,9 @@ executable VKManager-exe
                      , directory
                      , filepath
                      , split
+                     , http-client
+                     , direct-sqlite
+                     , unix
   default-language:    Haskell2010
 
 test-suite VKManager-test
